Corrections
- footer background green(without balls) - Dark Green
- video animation hover button and title are overlapped - Corrected
- One click to go to contacts form - Added
- Search is not working(hold) - Disabled search
- proper tagging for featured project - Name visible in phone

--- a/assets/css/_sass/custom.scss
+++ b/assets/css/_sass/custom.scss
@@ -28,3 +28,64 @@
         margin-bottom: 70px 
     }
 }
+.header-contact{
+    margin-right: -55vw;
+    @include media-query($on-palm) {
+        margin-right: 0
+    }
+}
+.menu-ham {
+    opacity:0.8;
+    &:hover {
+        opacity:0.5;    
+    }
+}
+.copy-center{
+    margin: 0 auto;
+    a {
+        color: #fff;
+    }
+    @include media-query($on-palm) {
+        margin-top: 40px;
+    }
+}
+.footer{
+    background: #3D434F;
+    .contact-item-title{
+        color: #fff;
+    }
+    .contact-item {
+        justify-content: inherit;
+        .info {
+            color: #fff;
+            a {
+                color: #c1c1c1;
+                &:hover{
+                    color: #fff;
+                }
+            }
+        }
+    }
+    .socials--double-icons li a {
+        color: #fff;
+        &:hover {
+            color: aquamarine;
+        }
+    }
+}
+.crumina-portfolio-item .content {
+    top: 30px;
+}
+.site-logo img {
+    @include media-query($on-palm){
+        max-width: 50px;
+    }
+}
+//Mobile section ribbon for projects in home page
+.mobile-heading {
+    display: none;
+    @include media-query($content-width) {
+        display: block;
+        text-align: center;
+    }
+}
